K8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app
  labels:
    app: node-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
      - name: node-app
        image: iamamash/node-app:latest
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /app/data
          name: node-app-storage

      volumes:
      - name: node-app-storage
        persistentVolumeClaim:
          claimName: node-app-pvc
